--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Sahil Shende",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.2",
     "mongoose": "^6.1.3",
     "nodemon": "^2.0.15"
